Add FORMAT_DATE mask
Iprove compressing directory

--- a/BACKUP_BEYOND.ini
+++ b/BACKUP_BEYOND.ini
@@ -1,16 +1,27 @@
 [general]
 ;Ubicación de Beyond Compare
-BCOMPARE_BIN = "C:\Program Files\Beyond Compare 4\BCompare.exe"
+; BCOMPARE_BIN = "C:\Program Files\Beyond Compare 4\BCompare.exe"
+BCOMPARE_BIN = "./BComp.exe"
 
 [backup]
-;Sitio del cual se sacará backup
-FROM_BACKUP = D:\SICA_LOCAL
+; folder to backup
+FROM_BACKUP = D:\devs\Booster\InfoCorp\TimeControl\InfoWeb3.Api
+; without branch
+; FROM_BACKUP = D:\Apps\vifm-w64-se-0.14-binary
 
-;Filtro de los archivos que sacará backup
-FILTER = "*.java;*.jsp;*.xml;*.js;*.css;*.properties;*.wsdd;ag-grid.js;paging.js;-jfspin-beans.xml;-.classpath;-.project;-angular.min.js;-*.xml.jsfdia;-empleadoCommonJSFunctions.jsp;-.metadata\;-Servers\;-sica.0.build\;-sica.0.Core\;-build\;-bin\;-test\;-*SOA\;-\.*\;-*.war\;-reports\;-*.ServiceTest\;-.svn\;-.settings\"
+FORMAT_MASK = %Y%m%d-%H%M
+
+; Filter for files and folders like beyond compare style
+FILTER = "*.cs;*.json;*.tsx;*.ts;*.csproj;*.sln;*.sql;*.sqlproj;*.config;-*.v*;-*.vsidx;-*.suo;-*.txt;-*.bin;-package-lock.json;-bin\;-obj\;-.vs\;-.vscode\;-.next\;-node_modules\;-copilot*\;-images\;-.git\;-logos\"
+; FILTER = "-*.exe"
 
 ;Genera en el directorio actual el archivo backup.log para seguir el proceso del backup, si este valor está en True, en caso que esté vacío no generará log
-displayLog=
+displayLog=False
 
 ;Comprime el backup, si este valor está en True, en caso que esté vacío no generará log
 compress=True
+
+;;;;;;;;;;;;;
+;BCompare.exe "C:\Path\To\Folder1" "C:\Path\To\Folder2"
+;os.name
+; 'nt'
